[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mixxx-bisect"
version = "0.1.0"
description = "Finds Mixxx regressions by binary searching over prebuilt snapshots"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = ["Topic :: Utilities"]
keywords = ["mixxx", "bisect", "regression"]
dependencies = []

[project.urls]
Homepage = "https://github.com/fwcd/mixxx-bisect"
Repository = "https://github.com/fwcd/mixxx-bisect"

[project.scripts]
mixxx_bisect = "mixxx-bisect:main"

[tool.setuptools.packages]
find = {}

[tool.pyright]
include = ["mixxx_bisect"]
